Added images and content for projects on about page

--- a/about.html
+++ b/about.html
@@ -68,19 +68,54 @@
                                 <a data-w-tab="Fincede Business Website" class="timeline-event inline-block tab-link" tabindex="-1" id="fincede-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_fincede-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Project Synergy at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="synergy-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Project Synergy at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="synergy-project" href="#w-tabs-0-data-w-pane-1" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Project Conversations with Clients at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="conversations-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Project Conversations with Clients at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="conversations-project" href="#w-tabs-0-data-w-pane-2" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Leasing Hub at Quadient" class="timeline-event inline-block tab-link" tabindex="-1" id="leasehub-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Leasing Hub at Quadient" class="timeline-event inline-block tab-link" tabindex="-1" id="leasehub-project" href="#w-tabs-0-data-w-pane-3" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_quadient-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Fly UX for UX Institute Course" class="timeline-event inline-block tab-link" tabindex="-1" id="fluyx-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Fly UX for UX Institute Course" class="timeline-event inline-block tab-link" tabindex="-1" id="fluyx-project" href="#w-tabs-0-data-w-pane-4" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
                                 </a>
                             </div>
+                        </div>
+                        <div class="project-content">
+                            <div data-w-tab="Fincede Business Website" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_fincede-project-image.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2018 • Cape Town, South Africa
+                                        </div>
+                                        <h3 class="project-title">Fincede Business Website
+                                        </h3>
+                                        <p class="project-title-text">I designed my first site for a business on Wordpress for Fincede Finacial Services. This project help me understand the basics of website layouts and design.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-w-tab="Fincede Business Website" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-1" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-1" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_sanlam-synergy-project-image.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2017 • Cape Town, South Africa
+                                        </div>
+                                        <h3 class="project-title">Project Synergy at Sanlam
+                                        </h3>
+                                        <p class="project-title-text">I was part of a team that researched, designed and presented a project for a central portal where all departments within Sanlam can add their projects, to ensure there is no duplication, enable participation, ensure compliance and promote cost effectiveness. 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                                
                         </div>
                         <div class="btn-container">
                             <div class="center-btn">
