Add content for projects summary on about page

--- a/about.html
+++ b/about.html
@@ -65,41 +65,25 @@
                         <div class="timeline-line"></div>
                         <div class="project-timeline-tab">
                             <div class="project-list" role="tablist">
-                                <a data-w-tab="Fincede Business Website" class="timeline-event inline-block tab-link" tabindex="-1" id="fincede-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Project Synergy at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="synergy-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
+                                </a>
+                                <a data-w-tab="Fincede Business Website" class="timeline-event inline-block tab-link" tabindex="-1" id="fincede-project" href="#w-tabs-0-data-w-pane-1" role="tab" aria-controls="w-tabs-0-data-w-pane-1" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_fincede-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Project Synergy at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="synergy-project" href="#w-tabs-0-data-w-pane-1" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Project Conversations with Clients at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="conversations-project" href="#w-tabs-0-data-w-pane-2" role="tab" aria-controls="w-tabs-0-data-w-pane-2" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Project Conversations with Clients at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="conversations-project" href="#w-tabs-0-data-w-pane-2" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
-                                    <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
-                                </a>
-                                <a data-w-tab="Leasing Hub at Quadient" class="timeline-event inline-block tab-link" tabindex="-1" id="leasehub-project" href="#w-tabs-0-data-w-pane-3" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Leasing Hub at Quadient" class="timeline-event inline-block tab-link" tabindex="-1" id="leasehub-project" href="#w-tabs-0-data-w-pane-3" role="tab" aria-controls="w-tabs-0-data-w-pane-3" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_quadient-project.png" width="25" alt="">
                                 </a>
-                                <a data-w-tab="Fly UX for UX Institute Course" class="timeline-event inline-block tab-link" tabindex="-1" id="fluyx-project" href="#w-tabs-0-data-w-pane-4" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                <a data-w-tab="Fly UX for UX Institute Course" class="timeline-event inline-block tab-link" tabindex="-1" id="fluyx-project" href="#w-tabs-0-data-w-pane-4" role="tab" aria-controls="w-tabs-0-data-w-pane-4" aria-selected="false">
                                     <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
                                 </a>
                             </div>
                         </div>
                         <div class="project-content">
-                            <div data-w-tab="Fincede Business Website" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_fincede-project-image.png);">
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="timeline-year">2018 • Cape Town, South Africa
-                                        </div>
-                                        <h3 class="project-title">Fincede Business Website
-                                        </h3>
-                                        <p class="project-title-text">I designed my first site for a business on Wordpress for Fincede Finacial Services. This project help me understand the basics of website layouts and design.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div data-w-tab="Fincede Business Website" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-1" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-1" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                            <div data-w-tab="Sanlam Synergy Project" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_sanlam-synergy-project-image.png);">
@@ -115,7 +99,70 @@
                                     </div>
                                 </div>
                             </div>
-                                
+                            <div data-w-tab="Fincede Business Website" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-1" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-1" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_fincede-project-image.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2018 • Cape Town, South Africa
+                                        </div>
+                                        <h3 class="project-title">Fincede Business Website
+                                        </h3>
+                                        <p class="project-title-text">I designed my first site for a business on Wordpress for Fincede Finacial Services. This project help me understand the basics of website layouts and design.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-w-tab="Sanlam Conversations with Clients Project" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-2" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-2" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_sanlam-conversations-project-image.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2018 • Cape Town, South Africa
+                                        </div>
+                                        <h3 class="project-title">Sanlam Conversations with Clients Project
+                                        </h3>
+                                        <p class="project-title-text">A colleague and I started a webinar series about topical issues in the financial industry and we reached over a 1000 people. I also designed the marketing material for the series. 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div data-w-tab="Leasing Hub at Quadient" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-3" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-3" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_leasehub-project.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2020 • Dublin, Ireland
+                                        </div>
+                                        <h3 class="project-title">Leasing Hub at Quadient
+                                        </h3>
+                                        <p class="project-title-text">I designed and developed a sharepoint site as a central hub for information and learning material for account managers. I also wrote a few articles for the site and designed the marketing material. 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-w-tab="Leasing Hub at Quadient" class="tab-pane tab-active" id="w-tabs-0-data-w-pane-4" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-4" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="ai-work-thumb" style="background-image: url(assets/images/franciska_du_toit_flyuxmobile-project.png);">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="timeline-year">2020 • Dublin, Ireland
+                                        </div>
+                                        <h3 class="project-title">Fly UX for UX Institute Course
+                                        </h3>
+                                        <p class="project-title-text">As part of the UXDI course, I did a case study as a UX researcher & designer for an airline booking app. This redesign case study was an opportunity to improve the experience users have today with airline booking apps. 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>  
                         </div>
                         <div class="btn-container">
                             <div class="center-btn">
