Add content and styling for qualifications summary on about page

--- a/about.html
+++ b/about.html
@@ -173,33 +173,49 @@
                         </div>
                     </div>
                     <div>
-                        <h1 class="homepage-heading" >
+                        <h1 class="about-heading" >
                             Fields of Study
                         </h1>
-                        <p>
+                        <p class="about-text">
                             I enjoy to learn and exploring different fields!
                         </p>
-                        <div>
-                            <h5>
+                        <div class="progress-container">
+                            <h5 class="progress-heading">
                                 In progress
                             </h5>
-                            <div>
-                                <ul>
-                                    <li></li>
-                                </ul>
+                            <div class="bullet-qual">
+                                <a data-w-tab="Diploma in Full Stack Software Development" class="timeline-event tab-link" id="developer-qual" href="https://codeinstitute.net/full-stack-software-development-diploma/" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                    <img src="assets/images/franciska_du_toit_code-institute-logo.png" width="25" alt="">
+                                </a>
+                                <div class="qualifications-text">Diploma in Full Stack Software Development
+                                </div>
                             </div>
                         </div>
-                        <div>
-                            <h5>
+                        <div class="progress-container">
+                            <h5 class="progress-heading">
                                 Completed
                             </h5>
-                            <div>
-                                <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                </ul>
+                            <div class="bullet-qual">
+                                <a class="bullet-qual-item" href="https://www.uxdesigninstitute.com/" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                    <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
+                                </a>
+                                <div class="qualifications-text">Professional Diploma in UX Design
+                                </div>
+                                <a class="timeline-event tab-link" id="dm-qual" href="https://www.getsmarter.com/products/uct-digital-marketing-online-short-course" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
+                                </a>
+                                <div class="qualifications-text">Certificate in Digital Marketing
+                                </div>
+                                <a data-w-tab="Certificate in Project Management" class="timeline-event tab-link" id="pm-qual" href="https://www.getsmarter.com/products/uct-project-management-foundations-online-short-course" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
+                                </a>
+                                <div class="qualifications-text">Certificate in Project Management
+                                </div>
+                                <a data-w-tab="Masters in Cross Cultural Business Practice" class="timeline-event tab-link" id="master-qual" href="https://www3.unifr.ch/ius/llm/en/" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                    <img src="assets/images/franciska_du_toit_university-of-fribourg-logo.png" width="25" alt="">
+                                </a>
+                                <div class="qualifications-text">Masters in Cross Cultural Business Practice
+                                </div>
                             </div>
                         </div>
                         <div>
