--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
                         <div class="btn-container">
                             <div class="center-btn">
                                 <button type="button" id="about-btn" class="btn btn-sm">See All Projects
-                                <a href="#"></a>
+                                <a href="portfolio.html"></a>
                                 </button>
                             </div>
                         </div>
