--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         </div>
                 <!-- Hero Image ----------->    
                 <figure class="figure">
-                    <img src="#" class="figure-img img-fluid rounded" alt="franciska_du_toit_photo">
+                    <img src="assets/images/franciska_du_toit_aboutpage_image.jpg" class="figure-img img-fluid rounded" alt="franciska_du_toit_photo">
                 </figure>    
                 <!-- Hero Image End-------->
                     </section>
@@ -172,22 +172,24 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <h1 class="about-heading" >
+                    <div class="qualification-container">
+                        <div>
+                            <h1 class="about-heading" >
                             Fields of Study
-                        </h1>
-                        <p class="about-text">
+                            </h1>
+                            <p class="about-text">
                             I enjoy to learn and exploring different fields!
-                        </p>
-                        <div class="progress-container">
-                            <h5 class="progress-heading">
+                            </p>
+                            <div class="progress-container">
+                                <h5 class="progress-heading">
                                 In progress
-                            </h5>
-                            <div class="bullet-qual">
-                                <a data-w-tab="Diploma in Full Stack Software Development" class="timeline-event tab-link" id="developer-qual" href="https://codeinstitute.net/full-stack-software-development-diploma/" target="_blank" role="tab" aria-controls="" aria-selected="">
-                                    <img src="assets/images/franciska_du_toit_code-institute-logo.png" width="25" alt="">
-                                </a>
-                                <div class="qualifications-text">Diploma in Full Stack Software Development
+                                </h5>
+                                <div class="bullet-qual">
+                                    <a href="https://codeinstitute.net/full-stack-software-development-diploma/" target="_blank" class="bullet-qual-icon">
+                                        <img src="assets/images/franciska_du_toit_code-institute-logo.png" width="25" alt="">
+                                    </a>
+                                    <div class="bullet-qual-text">Diploma in Full-Stack Software Development
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -196,31 +198,42 @@
                                 Completed
                             </h5>
                             <div class="bullet-qual">
-                                <a class="bullet-qual-item" href="https://www.uxdesigninstitute.com/" target="_blank" role="tab" aria-controls="" aria-selected="">
+                                <a href="https://www.uxdesigninstitute.com/" target="_blank" class="bullet-qual-icon">
                                     <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
                                 </a>
-                                <div class="qualifications-text">Professional Diploma in UX Design
-                                </div>
-                                <a class="timeline-event tab-link" id="dm-qual" href="https://www.getsmarter.com/products/uct-digital-marketing-online-short-course" target="_blank" role="tab" aria-controls="" aria-selected="">
-                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
-                                </a>
-                                <div class="qualifications-text">Certificate in Digital Marketing
-                                </div>
-                                <a data-w-tab="Certificate in Project Management" class="timeline-event tab-link" id="pm-qual" href="https://www.getsmarter.com/products/uct-project-management-foundations-online-short-course" target="_blank" role="tab" aria-controls="" aria-selected="">
-                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
-                                </a>
-                                <div class="qualifications-text">Certificate in Project Management
-                                </div>
-                                <a data-w-tab="Masters in Cross Cultural Business Practice" class="timeline-event tab-link" id="master-qual" href="https://www3.unifr.ch/ius/llm/en/" target="_blank" role="tab" aria-controls="" aria-selected="">
-                                    <img src="assets/images/franciska_du_toit_university-of-fribourg-logo.png" width="25" alt="">
-                                </a>
-                                <div class="qualifications-text">Masters in Cross Cultural Business Practice
+                                <div class="bullet-qual-text">Professional Diploma in UX Design
                                 </div>
                             </div>
-                        </div>
+                            <div class="bullet-qual">
+                                <a href="https://www.getsmarter.com/products/uct-digital-marketing-online-short-course" target="_blank" class="bullet-qual-icon">
+                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
+                                </a>
+                                <div class="bullet-qual-text">Certificate in Digital Marketing
+                                </div>
+                            </div>
+                            <div class="bullet-qual">
+                                <a href="https://www.getsmarter.com/products/uct-project-management-foundations-online-short-course" target="_blank" class="bullet-qual-icon">
+                                    <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
+                                </a>
+                                <div class="bullet-qual-text">Certificate in Project Management
+                                </div>
+                            </div>
+                            <div class="bullet-qual">
+                                <a href="https://www3.unifr.ch/ius/llm/en/" target="_blank" class="bullet-qual-icon">
+                                    <img src="assets/images/franciska_du_toit_university-of-fribourg-logo.png" width="25" alt="">
+                                </a>
+                                <div class="bullet-qual-text">Masters in Cross Cultural Business Practice
+                                </div>
+                            </div>
                         <div>
-                            <p>Download a full PDF version of my CV</p>
+                            <p class="cv-text">Download a full PDF version of my CV
+                                <a href="#" target="_blank" class="cv-pdf">
+                                <i class="fa fa-download" aria-hidden="true"></i>
+                                <span class="sr-only">Download link.</span>
+                                </a>
+                            </p>
                         </div>
+                    </div>
                     </div>
                 </div>
                 <!-- Content Section End-->
