--- a/index.html
+++ b/index.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="Franciska Du Toit Personal and Portfolio Website">
-        <meta name="keywords" content="Franciska Du Toit, Franciska Du Toit website">
-        <title>Franciska Du Toit</title>
-        <!-- Favicon to update -->
-        <link rel="shortcut icon" type="image/jpg" href="#">
-        <!-- Bootstrap CDN ------>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-        <!-- Fontawesom Icons -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-        <!-- CSS style sheet --->
-        <link href="assets/css/style.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Franciska Du Toit Personal and Portfolio Website">
+    <meta name="keywords" content="Franciska Du Toit, Franciska Du Toit website">
+    <title>Franciska Du Toit</title>
+    <!-- Favicon to update -->
+    <link rel="shortcut icon" type="image/jpg" href="#">
+    <!-- Bootstrap CDN ------>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+    <!-- Fontawesom Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- CSS style sheet --->
+    <link href="assets/css/style.css" rel="stylesheet">
+</head>
 <body>
-    <div class="container-fluid">
-        <div class="row" >
-            <!-- Hero Image-->
-            <div class="col-12 col-md-6">
-                <section>
-                <!-- Nav Menu Section Code from Bootstrap-->
-                        <div class="site-header"> 
-                            <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
-                                <div class="container-fluid">
-                                    <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
-                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                        <span class="navbar-toggler-icon"></span>
-                                    </button>
-                                    <div class="collapse navbar-collapse" id="navbarNav">
-                                        <ul class="navbar-nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="about.html">About</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="contact.html">Contact</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </nav>
-                <!-- Nav Menu Section End-->                
-                        </div>
-                <!-- Hero Image ----------->    
-                <figure class="figure">
-                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="figure-img img-fluid rounded" alt="franciska_du_toit_photo">
-                </figure>    
-                <!-- Hero Image End-------->
-                    </section>
+    <!-- Nav Menu Section Code from Bootstrap-->
+    <div class="site-header"> 
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Franciska Du Toit
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
+            </div>
+        </nav>
+    </div>
+    <!-- Nav Menu end ------------>
+    <div class="container">
+    <!-- Hero Image for Desktop -->
+    <section class="hero-image "  style="background-image: url(assets/images/franciska-du-toit-homepage-image.jpg);">
+        <div class="hero-image-footer">
+            <ul class="social-list">
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+            </ul>
+        </div>
+    </section>
+    <!-- Hero Image for Desktop End-->
                 <!-- Content Section------->
                 <div class="col-12 col-md-6 personal-info-container">
                     <h1 class="homepage-heading" >
@@ -134,7 +136,7 @@
                     </div>
                 </footer>
             </div>
-    </div>
+    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
