Change layout for content section on home page

--- a/index.html
+++ b/index.html
@@ -60,61 +60,82 @@
         </div>
     </section>
     <!-- Hero Image for Desktop End-->
-                <!-- Content Section------->
-                <div class="col-12 col-md-6 personal-info-container">
-                    <h1 class="homepage-heading" >
-                        Hi, I am Franciska Du Toit - 
-                        <br> UX Designer, Problem Solver and Software Developer in the making. 
-                    </h1>
-                        <p class="intro-paragraph">
-                        My goal is to inspire people to explore, learn and challenge the norm so that we change the world
-                        </p>
-                    <div>
-                    <!-- original code credit for bullets: https://austinknight.com/ -->
-                        <div class="bullet">
-                            <div class="bullet-icon">
-                                <i class="fas fa-map-marker-alt" alt="map-icon"></i>
-                            </div>
-                                <div class="bullet-text">Based In Ireland
-                                </div>
+    <!-- Content section-->
+    <section class="personal-content">
+        <section class="personal-section">
+            <div class="container-fluid container-custom">
+                <div class="row">
+                    <div class="col-sm-12">
+                    <!-- Hero Image for Mobile & Tablet -->
+                        <div class="hero-image-mobile" style="background-image: url(assets/images/franciska-du-toit-homepage-image.jpg);">
                         </div>
-                        <div class="bullet">
-                            <div class="bullet-icon">
-                                <i class="fas fa-graduation-cap"></i>
-                            </div>
-                                <div class="bullet-text">Qualified in UX Design
-                                </div>
+                    <!-- Hero Image for Mobile & Tablet end-->
+                    <!-- Intro text-->
+                        <div class="personal-content-container">
+                            <h1 class="about-heading">Hi, I am Franciska Du Toit - 
+                            <br> UX Designer, Problem Solver and Software Developer in the making. </h1>
+                            <p>My goal is to inspire people to explore, learn and challenge the norm so that we change the world.</p>
                         </div>
-                        <div class="bullet">
-                            <div class="bullet-icon">
-                                <i class="fas fa-code"></i>
-                            </div>
-                                <div class="bullet-text">Studying Software Development
-                                </div>
-                        </div>
-                        <div class="bullet">
-                            <div class="bullet-icon">
-                                <i class="fas fa-anchor"></i>
-                            </div>
-                                <div class="bullet-text">Learning to Sail
-                                </div>
-                        </div>
-                    </div>
-                    <div class="btn-container">
-                        <div class="center-btn">
-                            <button type="button" id="about-btn" class="btn btn-sm">More About Me
-                            <a href="about.html"></a>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="quote-container">
-                        <blockquote class="blockquote">
-                            <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”</p>
-                        </blockquote>
+                    <!-- Intro text end-->
                     </div>
                 </div>
-                <!-- Content Section End-->
-                <!-- Footer Section------->
+            </div>
+        </section>
+        <!-- Personal info-->
+        <section class="personal-section">
+            <div class="container-fluid container-custom">
+                <div class="row ">
+                    <div class="col-12 col-md-6 bullet">
+                    <!-- Personal Info Bullets ------->
+                        <div class="bullet-icon"><i class="fas fa-map-marker-alt" alt="map-icon"></i></div>
+                        <div class="bullet-text">Based In Ireland</div>
+                    </div>
+                    <div class="col-12 col-md-6 bullet">
+                        <div class="bullet-icon"><i class="fas fa-graduation-cap"></i></div>
+                        <div class="bullet-text">Qualified in UX Design</div>
+                    </div>
+                    <div class="col-12 col-md-6 bullet">
+                        <div class="bullet-icon"><i class="fas fa-code"></i></div>
+                        <div class="bullet-text">Studying Software Development</div>
+                    </div>
+                    <div class="col-12 col-md-6 bullet">
+                        <div class="bullet-icon"><i class="fas fa-anchor"></i></div>
+                        <div class="bullet-text">Learning to Sail</div>
+                    </div>
+                    <!-- Personal Info Bullets End -------->
+                    <!-- Button to about page ------------->
+                    <div class="about-btn-container">
+                        <div class="list-group">
+                            <a href="about.html" class="list-group-item list-group-item-secondary ">More about me
+                            </a>
+                        </div>
+                    </div>
+                    <!-- Button to about page end -------->
+                    <!-- Quote for tablet and desktop ---->
+                    <div class="quote-container">
+                        <blockquote class="blockquote">
+                            <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”
+                            </p>
+                        </blockquote>
+                    </div>
+                    <!-- Quote for tablet and desktop end -->
+                </div>
+            </div>
+        </section>
+        <!-- Social Footer for mobile and tablet end -->
+        <section class="hero-image-footer-mobile">
+            <ul class="social-list">
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+            </ul>
+        </section>
+        <!-- Social Footer for mobile and tablet end -->
+        <!-- Personal info end-->
+    </section>
+    <!-- Content section end-->
+    <!-- Footer Section------->
                 <footer class="footer">
                     <div class="container-fluid footer-container">
                         <div class="row">
